# visual-document-search

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/_report/: research_report.md
docs/test_results/: coverage_summary.txt  pytest_output.txt  quality_gates.txt
results/: layout.json  metrics.json  queries.jsonl
results/_style/: repo.mplstyle
src/cps/: runner.py  types.py
src/cps/cli/: main.py
src/cps/encoders/: colpali_synth.py
src/cps/scoring/: maxsim.py  metrics.py
src/cps/viz/: charts.py
tests/: test_encode.py  test_maxsim.py  test_metrics.py
