[project]
name = "cps"
version = "0.12.0"
description = "ColPali-style multimodal document retrieval (no OCR): page image -> patch embeddings -> MaxSim against query."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Akshitha Reddy Lingampally" }]
keywords = ["colpali", "multimodal-retrieval", "document-search", "vidore", "vlm"]

dependencies = [
    "transformers>=4.45,<5",
    "torch>=2.2",
    "Pillow>=10",
    "datasets>=2.19,<3",
    "numpy>=1.26,<2",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "typer>=0.12",
    "pydantic>=2.7",
    "loguru>=0.7",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8","pytest-cov>=5","ruff>=0.5","mypy>=1.10","types-Pillow","types-PyYAML","types-tqdm"]

[project.scripts]
cps = "cps.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cps"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E","W","F","I","B","UP","SIM","RUF"]
ignore = ["E501","B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
ignore_missing_imports = true
exclude = ["build/","dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = ["slow: tests that download VLMs"]
